--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,8 @@
     <div class="row align-items-center justify-content-md-between">
       <div class="col-md-6">
         <div class="copyright">
-          <span> © {{ 'now' | date: "%Y" }} idemeum</a></span>
+          <span> © {{ 'now' | date: "%Y" }} idemeum</a></span><br>
+          <span> Palo Alto, CA</span>
         </div>
       </div>
       <div class="col-md-6">
