--- a/_includes/landing-page/passwordless-dropdown.html
+++ b/_includes/landing-page/passwordless-dropdown.html
@@ -31,11 +31,11 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
               <div class="card-body opacity-8">
-                <strong>$14.7B</strong> in losses due to fraud in 2019. (Javelin 2019 Identity Fraud Study)
+                <strong>$14.7B</strong> in losses due to fraud in 2019 (Javelin 2019 Identity Fraud Study).
                 <br> <br>
                 <strong>$70</strong> is the average cost for a password reset (Okta).
                 <br><br>
-                <strong>24 hours</strong> is the average time employee spends on logins per year (Verizon Data Breach Report, 2019)
+                <strong>24 hours</strong> is the average time employee spends on logins per year (Verizon Data Breach Report, 2019).
               </div>
             </div>
           </div>
@@ -51,9 +51,9 @@
             </div>
             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
               <div class="card-body opacity-8">
-                <strong>51%</strong> of people dislike remembering yet another password
+                <strong>51%</strong> of people dislike remembering yet another password.
                 <br><br>
-                <strong>80%</strong> of workers reported being fed up with using passwords (Online Registration and Password Study)
+                <strong>80%</strong> of workers reported being fed up with using passwords (Online Registration and Password Study).
               </div>
             </div>
           </div>
