--- a/_includes/landing-page/setup.html
+++ b/_includes/landing-page/setup.html
@@ -7,10 +7,10 @@
 
 
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm d-flex align-items-stretch">
 
 
-        <div class="card" style="min-height: 415px;">
+        <div class="card">
           <img class="card-img-top" src="./assets/img/landing/download.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="text-default">Download app</h5>
@@ -20,10 +20,10 @@
 
 
       </div>
-      <div class="col-sm">
+      <div class="col-sm d-flex align-items-stretch">
 
 
-        <div class="card" style="min-height: 415px;">
+        <div class="card">
           <img class="card-img-top" src="./assets/img/landing/profile.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="text-default">Create profile</h5>
@@ -35,9 +35,9 @@
 
 
       </div>
-      <div class="col-sm">
+      <div class="col-sm d-flex align-items-stretch">
 
-        <div class="card" style="min-height: 415px;">
+        <div class="card">
           <img class="card-img-top" src="./assets/img/landing/verify.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="text-default">Verify claims</h5>
