--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 <body>
   {% include header.html %}
   <div class="wrapper page">
-    {% if page.url != "/" and page.collection != "posts" and page.type != "blogListing" and page.type != "contact" %}
+    {% if page.url != "/" and page.collection != "posts" and page.type != "blogListing" and page.type != "myType" and page.type != "contact" %}
     <!-- Is not a blog post or blog archive or contact page -->
     {% if page.featured_image %}
     <!-- Is a page with a banner -->
@@ -66,7 +66,8 @@
         </div>
       </div>
     </div>
-    {% elsif page.title %}
+
+    {% elsif page.title%}
     <!-- Is a page without a banner -->
     <div class="container contentWrapper pb-2">
       <div class="text-left mt-5 mb-3">
