--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,9 +48,11 @@
 </head>
 
 <body>
-  {% include header.html %}
+  {% if page.type != "login-page" %}
+    {% include header.html %}
+  {% endif %}
   <div class="wrapper page">
-    {% if page.url != "/" and page.collection != "posts" and page.type != "blogListing" and page.type != "myType" and page.type != "contact" %}
+    {% if page.url != "/" and page.collection != "posts" and page.type != "blogListing" and page.type != "myType" and page.type != "contact" and page.type != "login-page" %}
     <!-- Is not a blog post or blog archive or contact page -->
     {% if page.featured_image %}
     <!-- Is a page with a banner -->
@@ -85,8 +87,9 @@
     </div>
   </div>
 
-
-  {% include footer.html %}
+  {% if page.type != "login-page" %}
+    {% include footer.html %}
+  {% endif %}
 
   {% if site.data.settings.advanced_settings.footer_js %}
   <!-- Extra Footer JS Code --> {{ site.data.settings.advanced_settings.footer_js }}
