Fixed blog styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
   {% endif %}
 
   {% if page.type == "blog-post" %}
-  <div class="page-header header-filter">
+  <div class="page-header header-filter" style="max-height: 1500px ;">
     <div class="page-header-image" style="background-image: url({{ page.featured_image | relative_url }});"></div>
     <div class="container">
       <div class="row">
