--- a/assets/styles/custom/_styles.scss
+++ b/assets/styles/custom/_styles.scss
@@ -57,3 +57,10 @@ a.link-white:visited {
   text-decoration: none;
   border-bottom: 1px solid white;
 }
+
+.padded-div {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
