Updated landing page

--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -1,4 +1,4 @@
-<header class="header bg-primary">
+<header class="header bg-primary page-header-small">
   <div style="min-height: 100vh; max-height: 999px; padding: 0; align-items: center; display: flex; overflow: hidden; box-sizing: border-box;">
     <div class="container" style="padding-top: 80px">
       <div class="row align-items-center text-left">
