--- a/assets/styles/custom/_styles.scss
+++ b/assets/styles/custom/_styles.scss
@@ -64,3 +64,20 @@ a.link-white:visited {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+
+.link-default {
+  color: #172b4d;
+  text-decoration: none;
+  border-bottom: 1px solid #172b4d;
+}
+
+a.link-default:hover {
+  color: #172b4d;
+  border-bottom: 2px solid #172b4d;
+}
+
+a.link-default:visited {
+  color: #172b4d;
+  text-decoration: none;
+  border-bottom: 1px solid #172b4d;
+}
