Fixed some typos

--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -4,7 +4,7 @@
       <div class="row align-items-center text-left">
         <div class="col-lg-6 col-12">
           <h6 class="text-uppercase" style="color: #B1C9F9;">idemeum</h6>
-          <h3 class="display-3" style="color: #FFFFFF;">We make digital identity private, secure, and simple.</h3>
+          <h3 class="display-3" style="color: #FFFFFF;">We make digital identity simple, secure, and private.</h3>
           <div class="row row-input mt-3 mb-4">
             <div class="col-sm-12 col-12">
               <a href="/contact"><button type="submit" class="btn btn-success">Request demo</button></a>
