--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -1,43 +1,35 @@
-<header class="header bg-primary page-header-small">
-  <div style="min-height: 100vh; max-height: 999px; padding: 0; align-items: center; display: flex; overflow: hidden; box-sizing: border-box;">
-    <div class="container" style="padding-top: 80px">
-      <div class="row align-items-center text-left">
-        <div class="col-lg-6 col-12">
-          <h6 class="text-uppercase" style="color: #B1C9F9;">idemeum</h6>
-          <h3 class="display-3" style="color: #FFFFFF;">We make digital identity simple, secure, and private.</h3>
-          <div class="row row-input mt-3 mb-4">
-            <div class="col-sm-12 col-12">
-              <a href="/contact"><button type="submit" class="btn btn-success">Request demo</button></a>
-              <!-- Button for modal -->
-              <button type="button" class="btn btn-outline-white" data-toggle="modal" data-target="#modal-video">Watch video</button>
-              <!-- Modal -->
-              <div class="modal fade" id="modal-video" tabindex="-1" role="dialog" aria-labelledby="modal-notification" aria-hidden="true">
-                <div class="modal-dialog modal-success modal-dialog-centered modal-lg" role="document">
-                  <div class="modal-content bg-gradient-success">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="modal-title-notification">Welcome to idemeum!</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <!-- Video explainer -->
-                      <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe id="video" src='https://www.youtube.com/embed/RGUxA5GRVQg' frameborder='0' allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                      <!-- ENd of video -->
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+<script src="/assets/js/typeit.min.js"></script>
+
+<header class="header-2 skew-separator">
+  <div class="page-header bg-primary" >
+    <div class="page-header-image" style="background-image: url('{{ '/assets/img/home-background/component11.png' | relative_url }}')"></div>
+    <div class="container pt-200">
+      <div class="row">
+        <div class="col-md-8 mx-auto text-center">
+
+          <p id="myElement" class=" text-white mb-4" style="letter-spacing: 0.2em; font-size: 1.6275rem;"></p>
+
+          <script>
+            new TypeIt("#myElement", {
+              speed: 100,
+              startDelay: 900,
+              loop: true
+              })
+                .type("Login with ", {delay: 200})
+                .type("<strong><i>one-click</i></strong>", {delay: 1500})
+                .delete(9, {speed: 150, delay: 200} )
+                .type("<strong><i>biometrics</i></strong>",{delay: 1500})
+                .delete(10, {speed: 150, delay: 200})
+                .type("<strong><i>mobile app</i></strong.",{delay: 1500})
+                .go()
+          </script>
+
+          <h2 class="display-2 text-white">All-in-one <mark style="color: #FFC463; background-color: #3E79F1">passwordless</mark> platform</h2>
         </div>
-        <div class="col-lg-6 col-12 pl-0">
-          <div class="image container">
-          <img src="{{ '/assets/img/home-background/home-background.png' | relative_url }}" width="100%">
-          </div>
+      </div>
+      <div class="row">
+        <div class="floating-box">
+
         </div>
       </div>
     </div>
