--- a/_includes/components/headers/contact-page-header.html
+++ b/_includes/components/headers/contact-page-header.html
@@ -14,8 +14,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center mb-5">
-        <h1 class="display-1">Got a question?</h1>
-        <h3 class="lead">We'd like to talk more about what you need</h3>
+        <h1 class="display-1">Want early access?</h1>
+        <h3 class="lead">Drop us a note and we will be happy to help.</h3>
       </div>
     </div>
   </div>
