--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -6,6 +6,8 @@
     <div class="container pt-200">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
+			
+	
 
           <p id="myElement" class=" text-white mb-4" style="letter-spacing: 0.2em; font-size: 1.6275rem;"></p>
 
@@ -25,6 +27,7 @@
           </script>
 
           <h2 class="display-2 text-white">All-in-one <mark style="color: #FFC463; background-color: #3E79F1">passwordless</mark> platform</h2>
+		  <a href="https://idemeum.com/contact" class="link-white"><p class=" text-white mt-5">Launching soon 🚀</p></a>
         </div>
       </div>
       <div class="row">
