Full site revision

--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -1,39 +1,131 @@
 <script src="/assets/js/typeit.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-<header class="header-2 skew-separator">
+
+
+<style>
+	.ml15 {
+	  font-weight: 800;
+	  font-size: 3.8em;
+	  text-transform: uppercase;
+	  letter-spacing: 0.2em;
+	}
+
+	.ml15 .word {
+	  display: inline-block;
+	  line-height: 1em;
+	}
+	
+	.downArrow{
+		position: relative;
+		bottom: -25%;
+		left: 50%;
+		margin-left:-20px;
+		width: 40px;
+		height: 40px;
+
+
+	}
+	.bounce {
+		-moz-animation: bounce 3s infinite;
+		-webkit-animation: bounce 3s infinite;
+		animation: bounce 3s infinite;
+	}
+	@-moz-keyframes bounce {
+	  0%, 20%, 50%, 80%, 100% {
+	    -moz-transform: translateY(0);
+	    transform: translateY(0);
+	  }
+	  40% {
+	    -moz-transform: translateY(-30px);
+	    transform: translateY(-30px);
+	  }
+	  60% {
+	    -moz-transform: translateY(-15px);
+	    transform: translateY(-15px);
+	  }
+	}
+	@-webkit-keyframes bounce {
+	  0%, 20%, 50%, 80%, 100% {
+	    -webkit-transform: translateY(0);
+	    transform: translateY(0);
+	  }
+	  40% {
+	    -webkit-transform: translateY(-30px);
+	    transform: translateY(-30px);
+	  }
+	  60% {
+	    -webkit-transform: translateY(-15px);
+	    transform: translateY(-15px);
+	  }
+	}
+	@keyframes bounce {
+	  0%, 20%, 50%, 80%, 100% {
+	    -moz-transform: translateY(0);
+	    -ms-transform: translateY(0);
+	    -webkit-transform: translateY(0);
+	    transform: translateY(0);
+	  }
+	  40% {
+	    -moz-transform: translateY(-30px);
+	    -ms-transform: translateY(-30px);
+	    -webkit-transform: translateY(-30px);
+	    transform: translateY(-30px);
+	  }
+	  60% {
+	    -moz-transform: translateY(-15px);
+	    -ms-transform: translateY(-15px);
+	    -webkit-transform: translateY(-15px);
+	    transform: translateY(-15px);
+	  }
+	}
+
+	
+</style>
+
+<header class="header-2">
   <div class="page-header bg-primary" >
-    <div class="page-header-image" style="background-image: url('{{ '/assets/img/home-background/component11.png' | relative_url }}')"></div>
-    <div class="container pt-200">
+    <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
 			
-	
+		  <h1 class="ml15 text-white">
+		    <span class="word">Meet</span>
+		    <span class="word">idemeum</span>
+		  </h1>
 
-          <p id="myElement" class=" text-white mb-4" style="letter-spacing: 0.2em; font-size: 1.6275rem;"></p>
+		  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+		  
+		  
+		  <script>
+			  
+			anime.timeline({loop: false})
+			  .add({
+			    targets: '.ml15 .word',
+			    scale: [14,1],
+			    opacity: [0,1],
+			    easing: "easeOutCirc",
+			    duration: 800,
+			    delay: (el, i) => 1000 * i
+			  })
+		  </script>
+		  
 
-          <script>
-            new TypeIt("#myElement", {
-              speed: 100,
-              startDelay: 900,
-              loop: true
-              })
-                .type("Login with ", {delay: 200})
-                .type("<strong><i>one-click</i></strong>", {delay: 1500})
-                .delete(9, {speed: 150, delay: 200} )
-                .type("<strong><i>biometrics</i></strong>",{delay: 1500})
-                .delete(10, {speed: 150, delay: 200})
-                .type("<strong><i>mobile app</i></strong.",{delay: 1500})
-                .go()
-          </script>
-
-          <h2 class="display-2 text-white">All-in-one <mark style="color: #FFC463; background-color: #3E79F1">passwordless</mark> platform</h2>
-		  <a href="https://idemeum.com/contact" class="link-white"><p class=" text-white mt-5">Launching soon 🚀</p></a>
+          <h2 class="display-4" style="color: #FFC463;">Passwordless and private identity platform</h2>
+		  
+		  <p class="lead text-white">Basically, we give you a drop in SDK to make your app passwordless in minutes with one-click, biometric, or QR-code login flows</p>
+		  
+		  <a href="https://developer.idemeum.com" target="_blank"><button type="button" class="btn btn-white">Get started free</button></a>
+		  <a href="https://jsdemo.idemeum.com" target="_blank"><button type="button" class="btn btn-outline-white">Live demo</button></a>
+		  
+		  
+		  <div class="downArrow bounce">
+		    <svg enable-background="new 0 0 32 32" height="32px" id="Слой_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.285,11.284L16,19.571l-8.285-8.288c-0.395-0.395-1.034-0.395-1.429,0  c-0.394,0.395-0.394,1.035,0,1.43l8.999,9.002l0,0l0,0c0.394,0.395,1.034,0.395,1.428,0l8.999-9.002  c0.394-0.395,0.394-1.036,0-1.431C25.319,10.889,24.679,10.889,24.285,11.284z" fill="#FFFFFF" id="Expand_More"/><g/><g/><g/><g/><g/><g/></svg>
+		  </div>
+		  
+		   
         </div>
       </div>
-      <div class="row">
-        <div class="floating-box">
-
-        </div>
       </div>
     </div>
   </div>
