--- a/assets/styles/custom/_styles.scss
+++ b/assets/styles/custom/_styles.scss
@@ -81,3 +81,28 @@ a.link-default:visited {
   text-decoration: none;
   border-bottom: 1px solid #172b4d;
 }
+
+
+.shape-custom {
+    background: linear-gradient(150deg, shapes-default-color("step-1-gradient-bg") 15%, #3E79F1 70%, shapes-default-color("step-3-gradient-bg") 94%);
+
+     :nth-child(1) {
+        background: shapes-default-color("span-1-bg");
+    }
+
+     :nth-child(2) {
+        background: shapes-default-color("span-2-bg");
+    }
+
+     :nth-child(3) {
+        background: shapes-default-color("span-3-bg");
+    }
+
+     :nth-child(4) {
+        background: shapes-default-color("span-4-bg");
+    }
+
+     :nth-child(5) {
+        background: shapes-default-color("span-5-bg");
+    }
+}
