--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,39 +1,150 @@
-<footer class="footer mt-5 pt-4">
-  <div class="container">
-    <div class="row row-grid align-items-center mb-2 mt-2">
-      <div class="col-lg-6">
-        <h4 class="mb-0 font-weight-light">{{ site.data.settings.footer_settings.footer_tagline }}</h4>
-      </div>
-      <div class="col-lg-6 text-lg-right">
-        {% include socials.html %}
-      </div>
-    </div>
-    <hr>
-    <div class="row align-items-center justify-content-md-between">
-      <div class="col-md-6">
-        <div class="copyright">
-          <span> © {{ 'now' | date: "%Y" }} idemeum</a></span><br>
-          <span> Palo Alto, CA</span>
+<div class="section section-footer" style="padding-bottom: 0;">
+      <div class="container-fluid">
+        <div id="footer-areas">
+          <div class="section section-shaped no-tilt">
+            <div class="shape shape-style-1 shape-custom">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="subscribe-line">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-6 col-sm-10 ml-auto mr-auto">
+                    <div class="text-center">
+                      <h4 class="title text-white">Subscribe to our newsletter</h4>
+                      <p class="description text-white">
+                        Join our newsletter and get identity news and product updates directly to your inbox.
+                      </p>
+                    </div>
+							
+					
+					
+					
+                    <form  method="post" action="https://idemeum.us2.list-manage.com/subscribe/post?u=9056f578db1a0752acd5cae85&amp;id=fa09d6eecc" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <div class="row">
+                        <div class="col-sm-8">
+                          <div class="form-group">
+                            <div class="input-group input-group-alternative mb-4">
+                              <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                              </div>
+                              <input class="form-control" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+							  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9056f578db1a0752acd5cae85_fa09d6eecc" tabindex="-1" value=""></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-4">
+						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">
+
+                        </div>
+                      </div>
+                    </form>
+					
+
+					
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--     *********   IMAGE SUBSCRIBE LINE     *********      -->
+            <!--     *********    SIMPLE FOOTER WITH SOCIAL AND BRAND     *********      -->
+            <footer class="footer bg-transparent">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-3">
+                    <div class="dropdown mt-2">
+					
+                      <a href="https://join.slack.com/t/idemeum-community/shared_invite/zt-npfwnoud-hOjc6rbmZmdTAY3xE3i5FA" target="_blank"><button class="btn btn-link text-white">
+                        <i class="fab fa-slack"></i>
+                        <span>Join Slack</span>
+                      </button></a>
+                    </div>
+                    <br>
+                    <div class="dropdown">
+                      <a href="mailto:support@idemeum.com" target="_blank"><button class="btn btn-link text-white">
+                        <i class="fas fa-envelope-square"></i>
+                        <span>Email us</span>
+                      </button></a>
+
+                    </div>
+                    <li class="copyrights">© idemeum</li>
+                  </div>
+                  <div class="col-md-2 col-6">
+                    <div class="column">
+                      <h4 class="mt-3">Product</h4>
+                      <ul>
+                        <li><a href="https://docs.idemeum.com/overview/oneclick/"><span>One-click</span></a></li>
+                        <li><a href="https://docs.idemeum.com/overview/biometric/"><span>Biometric</span></a></li>
+                        <li><a href="https://docs.idemeum.com/overview/loginapp/"><span>QR-code</span></a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-2 col-6">
+                    <div class="column">
+                      <h4 class="mt-3">Resources</h4>
+                      <ul>
+                        <li class="nav-item">
+                          <a href="https://jsdemo.idemeum.com">
+                            Live demo
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="https://docs.idemeum.com">
+                            Docs
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="https://blog.idemeum.com">
+                            Blog
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="https://github.com/idemeum">
+                            GitHub
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-2 col-6">
+                    <div class="column">
+                      <h4 class="mt-3">Company</h4>
+                      <ul>
+                        <li class="nav-item">
+                          <a href="/about">
+                            About us
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-md-3 col-6">
+                    <div class="column">
+                      <h4 class="mt-3">Follow us:</h4>
+                      <div class="btn-wrapper profile text-left">
+                        <a target="_blank" href="https://twitter.com/idemeum" class="btn btn-twitter btn-sm" data-toggle="tooltip" data-original-title="Follow us">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                        <a target="_blank" href="https://www.facebook.com/idemeum" class="btn btn-facebook btn-sm" data-toggle="tooltip" data-original-title="Like us">
+                          <i class="fab fa-facebook-square"></i>
+                        </a>
+                        <a target="_blank" href="https://www.linkedin.com/company/idemeum/" class="btn btn-linkedin btn-sm" data-toggle="tooltip" data-original-title="Follow us">
+                          <i class="fab fa-linkedin"></i>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </footer>
+          </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <ul class="nav nav-footer justify-content-end">
-          {% for item in site.data.settings.menu_settings.menu_items %}
-          {% if item.submenu_items %}
-
-          {% else %}
-          <li class="nav-item">
-            <a href="{{ item.url | relative_url }}" class="nav-link">
-              <span class="nav-link-inner--text">{{ item.title }}</span>
-            </a>
-          </li>
-          {% endif %}
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-  </div>
-</footer>
+</div>
 
 
 
