--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,6 +74,13 @@
                   </li>
                 {% endif %}
               {% endfor %}
+			  
+ 			 <li class="nav-item">
+ 			             <a href="https://developer.idemeum.com" class="btn btn-warning" target="_blank">
+ 			               <i class="ni ni-basket d-lg-none"></i>
+ 			               <span class="nav-link-inner--text">Try it</span>
+ 			             </a>
+ 			           </li>
 
             </ul>
           </div>
