--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -4,12 +4,42 @@
 
 
 <style>
-	.ml15 {
-	  font-weight: 800;
-	  font-size: 3.8em;
-	  text-transform: uppercase;
-	  letter-spacing: 0.2em;
+	@media only screen and (max-width:300px) {
+		
+		.ml15 {
+		  font-size: 2.5em;
+		}
+		
+		
 	}
+	
+    @media only screen and (min-width:300px) and (max-width:400px){
+		
+		.ml15 {
+		  font-size: 3em;
+		}
+		
+		
+	}
+
+	
+    @media only screen and (min-width:400px){
+		
+		.ml15 {
+		  font-size: 3.8em;
+		}
+		
+		
+	}
+
+		
+		.ml15 {
+		  font-weight: 800;
+		  text-transform: uppercase;
+		  letter-spacing: 0.2em;
+		}
+
+	
 
 	.ml15 .word {
 	  display: inline-block;
@@ -115,8 +145,8 @@
 		  
 		  <p class="lead text-white">Basically, we give you a drop in SDK to make your app passwordless in minutes with one-click, biometric, or QR-code login flows</p>
 		  
-		  <a href="https://developer.idemeum.com" target="_blank"><button type="button" class="btn btn-white">Get started free</button></a>
-		  <a href="https://jsdemo.idemeum.com" target="_blank"><button type="button" class="btn btn-outline-white">Live demo</button></a>
+		  <a href="https://developer.idemeum.com" target="_blank"><button type="button" class="btn btn-white mt-1">Get started free</button></a>
+		  <a href="https://jsdemo.idemeum.com" target="_blank"><button type="button" class="btn btn-outline-white mt-1">Live demo</button></a>
 		  
 		  
 		  <div class="downArrow bounce">
