--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,9 +77,7 @@
                     <div class="column">
                       <h4 class="mt-3">Product</h4>
                       <ul>
-                        <li><a href="https://docs.idemeum.com/overview/oneclick/"><span>One-click</span></a></li>
-                        <li><a href="https://docs.idemeum.com/overview/biometric/"><span>Biometric</span></a></li>
-                        <li><a href="https://docs.idemeum.com/overview/loginapp/"><span>QR-code</span></a></li>
+                        <li><a href="https://idemeum.com/forcustomers/"><span>App login</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -89,7 +87,7 @@
                       <ul>
                         <li class="nav-item">
                           <a href="https://jsdemo.idemeum.com">
-                            Live demo
+                            App login demo
                           </a>
                         </li>
                         <li class="nav-item">
