--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -4,47 +4,6 @@
 
 
 <style>
-	@media only screen and (max-width:300px) {
-		
-		.ml15 {
-		  font-size: 2.5em;
-		}
-		
-		
-	}
-	
-    @media only screen and (min-width:300px) and (max-width:400px){
-		
-		.ml15 {
-		  font-size: 3em;
-		}
-		
-		
-	}
-
-	
-    @media only screen and (min-width:400px){
-		
-		.ml15 {
-		  font-size: 3.8em;
-		}
-		
-		
-	}
-
-		
-		.ml15 {
-		  font-weight: 800;
-		  text-transform: uppercase;
-		  letter-spacing: 0.2em;
-		}
-
-	
-
-	.ml15 .word {
-	  display: inline-block;
-	  line-height: 1em;
-	}
 	
 	.downArrow{
 		position: relative;
@@ -118,36 +77,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
+			<h4 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">Passwordless future is here</h4>				
+			<h1 id="myElement" class="display-2 text-white mb-3"></h1>
 			
-		  <h1 class="ml15 text-white">
-		    <span class="word">Meet</span>
-		    <span class="word">idemeum</span>
-		  </h1>
+			           <script>
+			             new TypeIt("#myElement", {
+			               speed: 100,
+			               startDelay: 900,
+			               loop: true
+			               })
+			                 .type("Passwordless employee<br> ", {delay: 200})
+			                 .type("<strong style='color: #FFC463;'>Onboarding </strong>", {delay: 1500})
+			                 .delete(11, {speed: 150, delay: 200} )
+			                 .type("<strong style='color: #FFC463;'>Login </strong>",{delay: 1500})
+			                 .delete(6, {speed: 150, delay: 200})
+			                 .type("<strong style='color: #FFC463;'>Single Sign-On </strong.",{delay: 1500})
+						     .delete(15, {speed: 150, delay: 200})
+						     .type("<strong style='color: #FFC463;'>Multi-Factor Auth </strong.",{delay: 1500})
+			                 .go()
+			           </script>
 
-		  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-		  
-		  
-		  <script>
-			  
-			anime.timeline({loop: false})
-			  .add({
-			    targets: '.ml15 .word',
-			    scale: [14,1],
-			    opacity: [0,1],
-			    easing: "easeOutCirc",
-			    duration: 800,
-			    delay: (el, i) => 1000 * i
-			  })
-		  </script>
-		  
+		  <a href="https://tally.so/r/w2aQL3" target="_blank"><button type="button" class="btn btn-white mt-1">Request access</button></a>			
 
-          <h2 class="display-4" style="color: #FFC463;">Passwordless and private identity platform</h2>
-		  
-		  <p class="lead text-white">Basically, we give you a drop in SDK to make your app passwordless in minutes with one-click, biometric, or QR-code login flows</p>
-		  
-		  <a href="https://developer.idemeum.com/devportal/index.html" target="_blank"><button type="button" class="btn btn-white mt-1">Get started free</button></a>
-		  <a href="https://jsdemo.idemeum.com" target="_blank"><button type="button" class="btn btn-outline-white mt-1">Live demo</button></a>
-		  
 		  
 		  <div class="downArrow bounce">
 		    <svg enable-background="new 0 0 32 32" height="32px" id="Слой_1" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M24.285,11.284L16,19.571l-8.285-8.288c-0.395-0.395-1.034-0.395-1.429,0  c-0.394,0.395-0.394,1.035,0,1.43l8.999,9.002l0,0l0,0c0.394,0.395,1.034,0.395,1.428,0l8.999-9.002  c0.394-0.395,0.394-1.036,0-1.431C25.319,10.889,24.679,10.889,24.285,11.284z" fill="#FFFFFF" id="Expand_More"/><g/><g/><g/><g/><g/><g/></svg>
