--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -77,8 +77,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
-			<h4 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">Passwordless future is here</h4>				
-			<h1 id="myElement" class="display-2 text-white mb-3"></h1>
+			<h6 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">App Management Platform</h6>
+			<h1 class="display-2 text-white mb-3">One place to manage your applications, simply.</h1>		
+			<h1 id="myElement" class="display-3 text-white mb-3"></h1>
+			
 			
 			           <script>
 			             new TypeIt("#myElement", {
@@ -86,14 +88,17 @@
 			               startDelay: 900,
 			               loop: true
 			               })
-			                 .type("Passwordless employee<br> ", {delay: 200})
-			                 .type("<strong style='color: #FFC463;'>Onboarding </strong>", {delay: 1500})
-			                 .delete(11, {speed: 150, delay: 200} )
-			                 .type("<strong style='color: #FFC463;'>Login </strong>",{delay: 1500})
-			                 .delete(6, {speed: 150, delay: 200})
-			                 .type("<strong style='color: #FFC463;'>Single Sign-On </strong.",{delay: 1500})
-						     .delete(15, {speed: 150, delay: 200})
-						     .type("<strong style='color: #FFC463;'>Multi-Factor Auth </strong.",{delay: 1500})
+			                 .type("<strong style='color: #FFC463;'>Mobile onboarding</strong>", {delay: 1000})
+						     .delete(20, {speed: 150, delay: 200})
+			                 .type("<strong style='color: #FFC463;'>Passwordless access</strong>", {delay: 1000})
+						     .delete(19, {speed: 150, delay: 200})
+			                 .type("<strong style='color: #FFC463;'>Single Sign-On</strong>",{delay: 1000})
+			                 .delete(14, {speed: 150, delay: 200})
+						     .type("<strong style='color: #FFC463;'>MFA</strong>",{delay: 1000})
+						     .delete(3, {speed: 150, delay: 200})
+						     .type("<strong style='color: #FFC463;'>Zero-touch user provisioning</strong>",{delay: 1000})
+						     .delete(28, {speed: 150, delay: 200})
+  						 	 .type("<strong style='color: #FFC463;'>Application visibility</strong>",{delay: 1000})
 			                 .go()
 			           </script>
 
