--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,9 +75,9 @@
                   </div>
                   <div class="col-md-2 col-6">
                     <div class="column">
-                      <h4 class="mt-3">Product</h4>
+                      <h4 class="mt-3">Solutions</h4>
                       <ul>
-                        <li><a href="https://idemeum.com/forcustomers/"><span>App login</span></a></li>
+                        <li><a href="https://idemeum.com/onboarding/"><span>Employee onboarding</span></a></li>
                       </ul>
                     </div>
                   </div>
