--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -77,9 +77,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto text-center">
-			<h6 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">App Management Platform</h6>
-			<h1 class="display-2 text-white mb-3">One place to manage your applications, simply.</h1>		
-			<h1 id="myElement" class="display-3 text-white mb-3"></h1>
+			<!-- <h6 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">App Management Platform</h6> -->
+			<h1 class="display-2 text-white mb-3">One place to manage your applications, <span class="font-tertiary-large" style="display: inline; color: #FFC463;">simply.</span></h1>		
+			<h5 class="mb-4 text-white">Onboarding, passwordless auth, and app visibility in one platform.</h5>
+			<!-- ><h1 id="myElement" class="display-3 text-white mb-3"></h1>
 			
 			
 			           <script>
@@ -100,7 +101,7 @@
 						     .delete(28, {speed: 150, delay: 200})
   						 	 .type("<strong style='color: #FFC463;'>Application visibility</strong>",{delay: 1000})
 			                 .go()
-			           </script>
+			           </script> -->
 
 		  <a href="https://tally.so/r/w2aQL3" target="_blank"><button type="button" class="btn btn-white mt-1">Request access</button></a>			
 
