--- a/assets/styles/custom/_styles.scss
+++ b/assets/styles/custom/_styles.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Red+Hat+Display');
+@import url('https://fonts.googleapis.com/css?family=Red+Hat+Text');
+
 .embed-responsive {
   position: relative;
   display: block;
@@ -105,4 +109,17 @@ a.link-default:visited {
      :nth-child(5) {
         background: shapes-default-color("span-5-bg");
     }
+}
+
+
+.font-tertiary {
+    font-family: indie flower;
+	font-size: 2.5rem;
+	font-weight: 500;
+}
+
+.font-tertiary-large {
+    font-family: indie flower;
+	font-size: 3.3rem;
+	font-weight: 500;
 }
