--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,7 +77,8 @@
                     <div class="column">
                       <h4 class="mt-3">Solutions</h4>
                       <ul>
-                        <li><a href="https://idemeum.com/onboarding/"><span>Employee onboarding</span></a></li>
+                        <li><a href="/onboarding"><span>Employee Onboarding</span></a></li>
+						<li><a href="/access"><span>Passwordless access</span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -86,23 +87,13 @@
                       <h4 class="mt-3">Resources</h4>
                       <ul>
                         <li class="nav-item">
-                          <a href="https://jsdemo.idemeum.com">
-                            App login demo
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a href="https://docs.idemeum.com">
-                            Docs
+                          <a href="/pricing">
+                            Pricing
                           </a>
                         </li>
                         <li class="nav-item">
                           <a href="https://blog.idemeum.com">
                             Blog
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a href="https://github.com/idemeum">
-                            GitHub
                           </a>
                         </li>
                       </ul>
@@ -114,7 +105,12 @@
                       <ul>
                         <li class="nav-item">
                           <a href="/about">
-                            About us
+                            About
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="/contact">
+                            Contact
                           </a>
                         </li>
                       </ul>
