--- a/_includes/home-header.html
+++ b/_includes/home-header.html
@@ -79,7 +79,7 @@
         <div class="col-md-8 mx-auto text-center">
 			<!-- <h6 class="text-white mb-3" style="letter-spacing: 0.2em; font-size: 1.6275rem;">App Management Platform</h6> -->
 			<h1 class="display-2 text-white mb-3">One place to manage your applications, <span class="font-tertiary-large" style="display: inline; color: #FFC463;">simply.</span></h1>		
-			<h5 class="mb-4 text-white">Onboarding, passwordless auth, and app visibility in one platform.</h5>
+			<h5 class="mb-4 text-white">Automated onboarding, passwordless authentication, visibility, and zero-trust security all in one platform.</h5>
 			<!-- ><h1 id="myElement" class="display-3 text-white mb-3"></h1>
 			
 			
